# 3D-gobang

./: CMakeLists.txt  README.md  main.cpp
include/: board.h  game.h  player.h
src/: board.cpp  game.cpp  player.cpp
